Adjust how files are downloaded